<resources>
    <string name="app_name">Wokba</string>
    <string name="enjoy_now">Enjoy Now</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_message">Please Contact the App Developer</string>
    <string name="error_register_failure">Username has been used, Please try another one</string>
    <string name="error_login_failure">Log In Failure, Please try again</string>
    <string name="register_success">Register Success! Go back and Log in!</string>
    <string name="map">Wokba</string>
    <string name="order">Order</string>
    <string name="messages">Shake</string>
    <string name="profile">Profile</string>
    <string name="current_order"> Current Order</string>
    <string name="order_history">Order History</string>
    <string name="permission_rationale">"Location permissions are needed."</string>
    <string name="network_error">No network connection availabel, please check your network</string>
    <string name="special_instructions">SPECIAL INSTRUCTIONS : </string>
    <string name="plate_order_notes">Add a note(extra sauce, no onions, etc.)</string>
    <string name="ingredients">INGREDIENTS : </string>
    <string name="description">DESCRIPTION : </string>
    <string name="options">ADDITIONAL OPTIONS : </string>
    <string name="new_order">New Order</string>
    <string name="check_out_options">Options</string>
    <string name="check_out_tax">Tax</string>
    <string name="check_out_total">Total with Tax</string>
    <string name="no_notes">No Notes</string>
    <string name="place_order">Place Order</string>
    <string name="check_out_final_price">Final Price</string>
    <string name="check_out_no_card">No Binding Card</string>
    <string name="me">Me</string>
    <string name="my_favorites">My Favorites</string>

    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>
    <string name="ok">OK</string>
    <string name="add">Add/Change</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="order_success">Order Success!</string>
    <string name="stay_here">Stay Here</string>
    <string name="order_go">See your Order in Order</string>
    <string name="shake_for_gift">Shake for Gift</string>
    <string name="shake_for_meal">Shake For Meal</string>
    <string name="go_to_meal">Go To Meal</string>
    <string-array name="currency_array">
        <item>Currency (optional)</item>
        <item>Unspecified</item>
        <item>USD</item>
    </string-array>
</resources>
