<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:paddingTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_success_icon"
        android:src="@drawable/ic_done_24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/order_success"
        android:gravity="center_horizontal"/>
    <Button
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_stay_here"
        android:text="@string/stay_here"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_go"
        android:text="@string/order_go"/>
</LinearLayout>